# cmaketestblogexample1

./: CMakeLists.txt  test1.cpp  test2.cpp
